# sql-macro

./: Cargo.toml  Readme.md
sql-macros/: Cargo.toml
sql-macros-core/: Cargo.toml
sql-macros-core/src/: types.rs
sql-macros-derive/: Cargo.toml
sql-macros-derive/src/: delete.rs  insert.rs  insert_many.rs  lib.rs  parser.rs  select.rs  select_all.rs  select_many.rs  table.rs  update.rs
sql-macros/src/: lib.rs
