[package]
name = "sql-macros-derive"
edition = "2024"
version = "0.1.1"
categories = ["database"]
description = "Auto generate sql queries for CRUD on sqlx"
keywords = ["sql", "postgres", "sqlx"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cheban1996/sql-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }

sql-macros-core = { version = "0.1.0", path = "../sql-macros-core" }
